--- a/wedding-invitation/src/index.css
+++ b/wedding-invitation/src/index.css
@@ -33,8 +33,7 @@ body {
 }
 
 img,
-video,
-iframe {
+video {
   max-width: 100%;
   height: auto;
 }
